--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+html{
+    background-color: azure;
+}
 header{
- background-color: rgb(4, 4, 112);
+ background-color: rgb(7, 59, 7);
  color: white;
  font-size: 1.2vw;
 }
@@ -22,4 +25,10 @@ button{
     height: 4vw;
     width: 10vw;
     font-size: 1.2vw;
+}
+.div1{
+float: left;
+}
+.div2{
+float: right;
 }
