--- a/style.css
+++ b/style.css
@@ -46,8 +46,40 @@ float: right;
 #home{
     font-size: 1.5vw;
 }
-.page{
+.pag{
     height: 3vw;
     width: 8vw;
     margin-bottom: 10vw;
+    background-color: rgb(7, 59, 7);
+    color: white;
+}
+.about{
+    position: relative;
+    right: 45%;
+}
+.div3{
+    width: 100%;
+}
+.cows{
+
+}
+.form1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+.feeds{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.form2{
+    display: flex;
+    justify-content: space-between;
+}
+.community{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
