--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ width: 50%;
 .div2{
 float: right;
     margin-bottom: 3vw;
+    clear: right;
 }
 .home{
     font-size: 3vw;
@@ -67,12 +68,16 @@ float: right;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    position: relative;
+    right: 45%;
 }
 .feeds{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 .form2{
     display: flex;
@@ -82,6 +87,8 @@ float: right;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 footer{
     background-color: rgb(8, 59, 8);
@@ -99,4 +106,17 @@ footer{
 .images{
     width: 20vw;
     height: 20vw;
+}
+.silage{
+    height: 24vw;
+    width: 24vw;
+}
+.form{
+    margin-left: 8vw;
+    margin-right: 8vw;
+}
+.breed{
+    position: relative;
+    right: 28%;
+
 }
