This commit introduces input functions for entering data from the farm.

--- a/style.css
+++ b/style.css
@@ -134,3 +134,12 @@ footer{
     position: relative;
     top: 10vw;
 }
+label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+input,
+label {
+    margin: .4rem 0;
+}
