--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ footer{
     color: gold;
     height: 20vw;
     position: relative;
-    top: 13vw;
+    top: 25vw;
 }
 .footer{
     display: flex;
@@ -160,5 +160,20 @@ label {
 
 }
 .totalamount{
-    
+    position: relative;
+    top: 13vw;
+    font-size: 1.2vw;
+}
+.lastearn{
+    position: relative;
+    top: 15vw;
+    font-size: 1.2vw;
+}
+.monthly{
+    background-color: rgb(121, 104, 10);
+    color: white;
+    position: relative;
+    top: 18vw;
+    height: 5vw;
+    font-size: 1.2vw;
 }
