This commit adjust the display of month input elements to flex. This will make the design more responsive.

--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ label {
     top: 18vw;
     height: 5vw;
     font-size: 1.2vw;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
 }
 .shed{
     width: 5vw;
