--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ input{
 .white{
     background-color: rgb(3, 46, 3);
     width: 2vw;
-    height: 100%;
+    height: inherit;
     margin: 0%;
     padding: 0%;
 }
