--- a/style.css
+++ b/style.css
@@ -38,14 +38,9 @@ button{
     margin-right: 5%;
 }
 
-img{
+.div2{
     width: 25%;
     height: auto;
-}
-.img{
-    height: fit-content;
-    width: fit-content;
-    padding: 0%;
 }
 #home{
     font-size: 1.5vw;
